Bug 1675203 - Backed out changeset 0bcd9a5ae49f (Bug 1667581) for causing memory usage regressions a=backout

Differential Revision: https://phabricator.services.mozilla.com/D96007