xpcom/io/nsSegmentedBuffer.cpp
@@ -113,6 +113,43 @@ void nsSegmentedBuffer::Empty() {
   mFirstSegmentIndex = mLastSegmentIndex = 0;
 }
 
+#if 0
+void
+TestSegmentedBuffer()
+{
+  nsSegmentedBuffer* buf = new nsSegmentedBuffer();
+  NS_ASSERTION(buf, "out of memory");
+  buf->Init(4, 16);
+  char* seg;
+  bool empty;
+  seg = buf->AppendNewSegment();
+  NS_ASSERTION(seg, "AppendNewSegment failed");
+  seg = buf->AppendNewSegment();
+  NS_ASSERTION(seg, "AppendNewSegment failed");
+  seg = buf->AppendNewSegment();
+  NS_ASSERTION(seg, "AppendNewSegment failed");
+  empty = buf->DeleteFirstSegment();
+  NS_ASSERTION(!empty, "DeleteFirstSegment failed");
+  empty = buf->DeleteFirstSegment();
+  NS_ASSERTION(!empty, "DeleteFirstSegment failed");
+  seg = buf->AppendNewSegment();
+  NS_ASSERTION(seg, "AppendNewSegment failed");
+  seg = buf->AppendNewSegment();
+  NS_ASSERTION(seg, "AppendNewSegment failed");
+  seg = buf->AppendNewSegment();
+  NS_ASSERTION(seg, "AppendNewSegment failed");
+  empty = buf->DeleteFirstSegment();
+  NS_ASSERTION(!empty, "DeleteFirstSegment failed");
+  empty = buf->DeleteFirstSegment();
+  NS_ASSERTION(!empty, "DeleteFirstSegment failed");
+  empty = buf->DeleteFirstSegment();
+  NS_ASSERTION(!empty, "DeleteFirstSegment failed");
+  empty = buf->DeleteFirstSegment();
+  NS_ASSERTION(empty, "DeleteFirstSegment failed");
+  delete buf;
+}
+#endif
+
 void nsSegmentedBuffer::FreeOMT(void* aPtr) {
   if (!NS_IsMainThread()) {
     free(aPtr);
@@ -122,16 +159,13 @@ void nsSegmentedBuffer::FreeOMT(void* aPtr) {
   nsCOMPtr<nsIRunnable> r = NS_NewRunnableFunction("nsSegmentedBuffer::FreeOMT",
                                                    [aPtr]() { free(aPtr); });
 
-  nsresult rv = NS_OK;
-  if (!mFreeMemoryQueue) {
-    rv = NS_CreateBackgroundTaskQueue("nsSegmentedBuffer::FreeOMT",
-                                      getter_AddRefs(mFreeMemoryQueue));
+  if (!mIOThread) {
+    mIOThread = do_GetService(NS_STREAMTRANSPORTSERVICE_CONTRACTID);
   }
 
-  // During the shutdown we are not able to obtain the thread and/or the
+  // During the shutdown we are not able to obtain the IOThread and/or the
   // dispatching of runnable fails.
-  if (NS_FAILED(rv) || !mFreeMemoryQueue ||
-      NS_FAILED(mFreeMemoryQueue->Dispatch(r.forget()))) {
+  if (!mIOThread || NS_FAILED(mIOThread->Dispatch(r.forget()))) {
     free(aPtr);
   }
 }
